[package]
name = "aoc"
version = "0.1.0"
authors = ["Martin Junghanns <github@s1ck.dev>"]
description = "Advent of Code solutions for @s1ck"
edition = "2021"
license = "MIT"
default-run = "aoc2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = "0.1.6"
humantime = "2.1.0"
owo-colors = { version = "3.2.0", features = ["supports-colors"] }

[[bin]]
name = "aoc2021"
