[package]
name = "aoc"
version = "0.1.0"
authors = ["Martin Junghanns <github@s1ck.dev>"]
description = "Advent of Code solutions for @s1ck"
publish = false
edition = "2021"
license = "MIT"
default-run = "aoc2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", features = ["deref", "deref_mut"], default-features = false }
graph = "0.1.6"
humantime = "2.1.0"
indexmap = "1.7.0"
num_enum = "0.5.5"
owo-colors = { version = "3.2.0", features = ["supports-colors"] }

[[bin]]
name = "aoc2021"
