[package]
name = "aoc"
version = "0.1.0"
authors = ["Martin Junghanns <github@s1ck.dev>"]
description = "Advent of Code solutions for @s1ck"
publish = false
edition = "2021"
license = "MIT"
default-run = "aoc2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2"
derive_more = { version = "0.99.17", features = ["deref", "deref_mut"], default-features = false }
fxhash = "0.2.1"
graph = "0.3"
humantime = "2.1.0"
indexmap = "1.9.2"
num_enum = "0.5.7"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
tap = "1"

[[bin]]
name = "aoc2021"
